# simple-search

./: .gitignore  Cargo.toml  README.md  list
.devcontainer/: devcontainer.json
docs/: DESIGN.md  INDEXER.md  SEARCHER.md
src/: corpus.rs  filter.rs  index.rs  indexer.rs  main.rs  searcher.rs
