[package]
name = "simple-search"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = {version="1.7.0"}
reqwest = {version = "0.11.12", features = ["blocking"]}
rust-stemmers = {version = "1.2.0"}
